berhasil membuat fitur lupa password

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,7 +147,7 @@
                         android:fontFamily="@font/cera_light"
                         android:id="@+id/tvLupaPass"
                         android:layout_weight="1"
-                        android:visibility="invisible"
+                        android:visibility="visible"
                         android:text="Lupa Password"
                         android:textColor="@color/black"
                         android:textSize="14sp"
