--- a/app/src/main/res/layout/activity_ubah_profile.xml
+++ b/app/src/main/res/layout/activity_ubah_profile.xml
@@ -154,6 +154,78 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/relaToolbar"
+                app:cardBackgroundColor="@color/grey_200"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Password"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/cera_black_italic"
+                        android:textSize="20sp"/>
+
+                    <com.tapisdev.penjualankasir.customview.EditText_Roboto_Regular
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:fontFamily="sans-serif"
+                        android:hint="Password Baru"
+                        android:inputType="textPassword"
+                        android:id="@+id/etPassword"
+                        android:layout_marginTop="10dp"
+                        android:paddingBottom="15.7dp"
+                        android:paddingLeft="16.3dp"
+                        android:paddingTop="15.7dp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey_800"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+                    <com.tapisdev.penjualankasir.customview.EditText_Roboto_Regular
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:fontFamily="sans-serif"
+                        android:hint="Konfirmasi Password Baru"
+                        android:id="@+id/etCPassword"
+                        android:inputType="textPassword"
+                        android:layout_marginTop="10dp"
+                        android:paddingBottom="15.7dp"
+                        android:paddingLeft="16.3dp"
+                        android:paddingTop="15.7dp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey_800"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Ubah Password"
+                        android:id="@+id/btnUpdatePassword"
+                        android:fontFamily="@font/cera_medium"
+                        android:textSize="15sp"
+                        android:background="@color/colorPrimary"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="15dp"/>
+
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
