--- a/app/src/main/res/layout/fragment_hutang.xml
+++ b/app/src/main/res/layout/fragment_hutang.xml
@@ -92,7 +92,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="1"
                 android:layout_marginHorizontal="5dp"
                 android:text="Tambah Hutang"
@@ -106,7 +106,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_marginHorizontal="5dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="1"
                 android:text="Hutang Saya"
                 android:fontFamily="@font/cera_medium"
