--- a/app/src/main/res/layout/fragment_untung.xml
+++ b/app/src/main/res/layout/fragment_untung.xml
@@ -96,27 +96,69 @@
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="10dp"
                         android:layout_gravity="left"
-                        android:fontFamily="@font/cera_black"
-                        android:text="Penjualan"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:layout_marginHorizontal="10dp"
+                        android:orientation="vertical">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/cera_black"
+                            android:text="Penjualan"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
 
-                    <TextView
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left"
+                            android:fontFamily="@font/cera_black"
+                            android:text="Rp. - "
+                            android:id="@+id/tvTotalPenjualan"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_gravity="right"
                         android:gravity="right"
-                        android:fontFamily="@font/cera_black"
-                        android:text="Keuntungan"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_gravity="right"
+                            android:gravity="right"
+                            android:fontFamily="@font/cera_black"
+                            android:text="Keuntungan"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_gravity="right"
+                            android:gravity="right"
+                            android:fontFamily="@font/cera_black"
+                            android:text="Rp. - "
+                            android:id="@+id/tvTotalUntung"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+
+
+
+
                 </LinearLayout>
 
             </LinearLayout>
